force-app/main/default/objects/Account/fields/Plivo_Sender_Id__c.field-meta.xml
<CustomField>
    <fullName>Plivo_Sender_Id__c</fullName>
    <inlineHelpText>Plivo Phone Number, shortcode, or Alphanumeric Sender ID.</inlineHelpText>
    <label>Plivo Sender Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>